// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`buildAssDocument 1 クリップ（タイトル + フェード） 1`] = `
"[Script Info]
; Generated by montash (docs/07 §6)
ScriptType: v4.00+
PlayResX: 1920
PlayResY: 1080
WrapStyle: 0
ScaledBorderAndShadow: yes
YCbCr Matrix: TV.709

[V4+ Styles]
Format: Name, Fontname, Fontsize, PrimaryColour, SecondaryColour, OutlineColour, BackColour, Bold, Italic, Underline, StrikeOut, ScaleX, ScaleY, Spacing, Angle, BorderStyle, Outline, Shadow, Alignment, MarginL, MarginR, MarginV, Encoding
Style: x1,Noto Sans CJK JP,96,&H00FFFFFF,&H000000FF,&H00000000,&H00000000,0,0,0,0,100,100,0,0,1,2,0,5,96,96,0,1

[Events]
Format: Layer, Start, End, Style, Name, MarginL, MarginR, MarginV, Effect, Text
Dialogue: 0,0:00:00.00,0:00:03.01,x1,,0,0,0,,{\\pos(960,540)\\fad(501,501)}Summer Trip 2026
"
`;

exports[`buildAssDocument 複数クリップは Style も Dialogue も 1 つずつ増える 1`] = `
"[Script Info]
; Generated by montash (docs/07 §6)
ScriptType: v4.00+
PlayResX: 1920
PlayResY: 1080
WrapStyle: 0
ScaledBorderAndShadow: yes
YCbCr Matrix: TV.709

[V4+ Styles]
Format: Name, Fontname, Fontsize, PrimaryColour, SecondaryColour, OutlineColour, BackColour, Bold, Italic, Underline, StrikeOut, ScaleX, ScaleY, Spacing, Angle, BorderStyle, Outline, Shadow, Alignment, MarginL, MarginR, MarginV, Encoding
Style: x1,Noto Sans CJK JP,96,&H00FFFFFF,&H000000FF,&H00000000,&H00000000,0,0,0,0,100,100,0,0,1,2,0,5,96,96,0,1
Style: x2,Noto Sans CJK JP,48,&H00FFFFFF,&H000000FF,&H66000000,&H66000000,0,0,0,0,100,100,0,0,4,12,0,7,0,0,0,1

[Events]
Format: Layer, Start, End, Style, Name, MarginL, MarginR, MarginV, Effect, Text
Dialogue: 0,0:00:00.00,0:00:03.01,x1,,0,0,0,,{\\pos(960,540)\\fad(501,501)}Summer Trip 2026
Dialogue: 0,0:00:12.01,0:00:15.02,x2,,0,0,0,,{\\pos(96,918)}福岡到着
"
`;

exports[`buildAssDocument 複数行と日本語（改行 → \\N、行頭空白 → \\h） 1`] = `
"[Script Info]
; Generated by montash (docs/07 §6)
ScriptType: v4.00+
PlayResX: 1920
PlayResY: 1080
WrapStyle: 0
ScaledBorderAndShadow: yes
YCbCr Matrix: TV.709

[V4+ Styles]
Format: Name, Fontname, Fontsize, PrimaryColour, SecondaryColour, OutlineColour, BackColour, Bold, Italic, Underline, StrikeOut, ScaleX, ScaleY, Spacing, Angle, BorderStyle, Outline, Shadow, Alignment, MarginL, MarginR, MarginV, Encoding
Style: x1,Hiragino Sans,48,&H00FFFFFF,&H000000FF,&H00000000,&H00000000,0,0,0,0,100,100,0,0,1,0,0,2,96,96,54,1

[Events]
Format: Layer, Start, End, Style, Name, MarginL, MarginR, MarginV, Effect, Text
Dialogue: 0,0:00:00.00,0:00:02.01,x1,,0,0,0,,福岡到着\\N\\h\\h博多駅より
"
`;
